great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
	margin-top: -20px;
    padding-top: 20px;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
	box-sizing: border-box;
}

html, body {
    height: 100%;
	font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

a{
	text-decoration:none;
}
p{
	width:95%;
	line-height: 1.25;
}
.section-one h1{
	font-size: 85px;
}
.container{
	width:80%;
	margin:0 auto;
}
nav {
	text-align:center;
	padding:1%;
	position:fixed;
	width:100%;
	background-color:#02fffb;
}

nav a{
	margin: 2%;
	vertical-align: super;
	color:gray;
}

.nav-image{
	margin-left: 3%;
	display:inline-block;
	background-image: url(..\img\logo.png);
}

section{
	text-align:center;
	margin:3% 0%;
}
.section-wrapper{
	margin: 5%;
	max-width: 100%;
	text-align: center;
}
.section-one{
	padding-bottom:1%;
}
.section-two{
	border-top: 1px solid black;
}

.image-section img{
	width: 100%;
}

.box{
	display:inline-block;
	margin: 0% 5%;
}

.feature-box{
	display:inline-block;
	width:50%;
	margin: 2% 0%;
	text-align:left;
}
.services-box{
	display:inline-block;
	width:33%;
	margin: 2% 0%;
	text-align:left;
}

button{
width: 200px;
padding: 2%;
background:white;
border: 1px solid black;
}
button a{
	color:black;
}

footer p{
	text-align:center;
}

footer{
	margin-bottom:10%;
	border-top: solid 1px black;
	font-family: 'Staatliches', cursive;
}

.footer-container{
	margin-top:3%;
}

